# Pseudo3dEngine

./: CMakeLists.txt  LICENSE.txt
Editor/: CMakeLists.txt
Editor/include/: main.h
Editor/source/: main.cpp
Engine/: CMakeLists.txt
Engine/include/: camera.h  map.h  player.h
Engine/source/: camera.cpp  main.cpp  map.cpp  player.cpp
include/: camera.h  config.h  main.h  map.h  player.h
source/: camera.cpp  map.cpp  player.cpp
